* `AsyncRestTemplate` supports request interception.

=== WebSocket Messaging Improvements

* `@SendTo` and `@SendToUser` can now be specified at class-level to share a common destination.

=== Testing Improvements

* The JUnit support in the _Spring TestContext Framework_ now requires JUnit 4.12 or higher.
* New `SpringRunner` _alias_ for the `SpringJUnit4ClassRunner`.
* An empty declaration of `@ContextConfiguration` can now be completely omitted if default
  XML files, Groovy scripts, or `@Configuration` classes are detected.
* `@Transactional` test methods are no longer required to be `public` (in TestNG and JUnit 5).
* `@BeforeTransaction` and `@AfterTransaction` methods are no longer required to be `public`.
* The `ApplicationContext` cache in the _Spring TestContext Framework_ is now bounded with a
  default maximum size of 32 and a _least recently used_ eviction policy. The maximum size
  can be configured by setting a JVM system property or Spring property called
  `spring.test.context.cache.maxSize`.
* New `ContextCustomizer` API for customizing a test `ApplicationContext` _after_ bean
  definitions have been loaded into the context but _before_ the context has been refreshed.
  Customizers can be registered globally by third parties, foregoing the need to implement a
  custom `ContextLoader`.
* `@Sql` and `@SqlGroup` may now be used as _meta-annotations_ to create custom _composed
  annotations_ with attribute overrides.
* Server-side Spring MVC Test supports expectations on response headers with multiple values.
* Server-side Spring MVC Test parses form data request content and populates request parameters.
* Client-side REST test support allows indicating how many times a request is expected and
  whether the order of declaration for expectations should be ignored (see <<spring-mvc-test-client>>).
* Client-side REST Test supports expectations for form data in the request body.